<resources>
    <string name="app_name">盈透</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">注册协议书</string>
    <string name="register_content">为使用平台的服务，用户应当阅读并遵守本协议,请用户务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议。限制、免责条款可能以黑体加粗形式提示用户注意。
除非用户已阅读并接受本协议所有条款，否则用户无权使用平台提供的服务。用户使用平台的服务即视为已阅读并同意上述协议的约束。 如果用户未满18周岁，请勿使用本平台及相关服务，由于用户授权其他人使用本平台服务，本平台将视为用户本人自己的操作，请用户确保实际操作者获得真实授权。</string>
    <string name="register_one">一、【协议的范围及形式】</string>
    <string name="register_one_content1.1">1.1本协议是用户与平台之间关于用户使用平台相关服务所订立的协议。“平台”是指平台的运营服务商及其相关服务可能存在的运营关联单位。“用户”是指使用平台相关服务的使用人，在本协议中更多地称为“您”。</string>
    <string name="register_one_content1.2">1.2本协议项下的服务是指平台向您提供的包括但不限于互联网金融信息、交易项目、电子商务和广告等产品及服务（以下简称“本服务”）。</string>
    <string name="register_one_content1.3">1.3您在使用平台某一特定服务时，该服务可能会另有单独的协议条款、相关业务规则等（以下统称为“单独协议”）。上述内容一经正式发布，即与本协议构成不可分割的共同组成部分，您同样应当遵守。</string>
    <string name="register_one_content1.4">1.4 本协议以网络签订形式形成，由您勾选网页上的“我已阅读并同意《平台服务协议》”并点击“下一步”按钮后生效。协议有效期与您的平台账户有效期一致，您的平台账户注销、被撤销后，平台协议随之终止或解除，但其中有关保密及知识产权等条款效力不受影响。</string>
    <string name="register_two">二、【账号与密码安全】</string>
    <string name="register_two_content2.1">2.1您在使用平台的服务时需要注册一个账号。关于您使用账号的具体规则，请遵守本协议及其他使用细则。</string>
    <string name="register_two_content2.2">2.2平台特别提醒您应妥善保管您的账号和密码。当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。</string>
    <string name="register_three">三、【用户个人信息保护】</string>
    <string name="register_three_content3.1">3.1保护用户个人信息是平台的一项基本原则。</string>
    <string name="register_three_content3.2">3.2您在注册账号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则无法使用本服务或在使用过程中受到限制。</string>
    <string name="register_three_content3.3">3.3一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。</string>
    <string name="register_three_content3.4">3.4平台将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。</string>
    <string name="register_three_content3.5">3.5平台不会将您的个人信息转移或披露给任何非关联的第三方，除非：</string>
    <string name="register_three_content3.5.1">（1）相关法律法规或法院、政府机关要求；</string>
    <string name="register_three_content3.5.2">（2）平台认为，为保证社会公众、平台的客户及员工的合法权益所必要且适当；</string>
    <string name="register_three_content3.5.3">（3）作为合并、收购、资产转让或类似交易的一部分而转移；</string>
    <string name="register_three_content3.5.4">（4）为平台提供您要求的服务所必需。</string>
    <string name="register_four">四、【使用本平台服务的方式】</string>
    <string name="register_four_content4.1">4.1您应当通过平台提供或认可的方式使用本平台服务。您依本协议条款所取得的权利不可转让。</string>
    <string name="register_four_content4.2">4.2您不得使用未经平台授权的插件、外挂或第三方工具对本协议项下的服务进行干扰、破坏、修改或施加其他影响。</string>
    <string name="register_four_content4.3">4.3 本平台服务的部分内容需要您根据本平台要求完成身份认证及银行卡认证，未进行身份认证及/或银行卡认证的您将无法使用该部分本平台服务。因未能完成认证而无法享受本平台服务造成的损失，本平台不承担任何责任。</string>
    <string name="register_five">五、【平台服务提供内容】</string>
    <string name="register_five_content">您理解并同意，平台的服务是按照现有技术和条件所能达到的现状提供的。平台会尽最大努力向您提供服务，确保服务的连贯性和安全性；但平台不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。平台将向您提供包括但不限于以下服务：</string>
    <string name="register_five_content5.1">5.1信息服务</string>
    <string name="register_five_content5.1.1">（1）您同意平台可以在提供服务的过程中自行或由第三方服务商通过平台网页、公告、短信等方式向您发送各类信息，其方式和范围可不经向您特别通知而变更。</string>
    <string name="register_five_content5.1.2">（2）平台依照法律的规定履行相关义务，但您应当自行判断公告信息的内容并为自己的判断行为负责，除法律明确规定外，您因依公告信息进行的交易而遭受的损失或损害，平台不承担责任（因公告信息本身不实、误导等归属平台责任的除外）。</string>
    <string name="register_five_content5.1.3">（3）您同意，对平台服务中出现的各类交易信息，您应自行审慎判断其真实性和可靠性，除法律明确规定外，您应对依上述信息进行的交易负责。</string>
    <string name="register_five_content5.2">5.2客户服务：</string>
    <string name="register_five_content5.2.1">（1）银行卡认证：为使用本平台或本平台委托的第三方机构提供的充值、取现、代扣等服务，您应按照本平台规定的流程提交以您本人名义登记的有效银行借记卡等信息，经由本平台审核通过后，本平台会将您的账户与前述银行账户进行绑定。如您未按照本平台规定提交相关信息或提交的信息错误、虚假、过时或不完整，或者本平台有合理的理由怀疑您提交的信息为错误、虚假、过时或不完整，本平台有权拒绝为您提供银行卡认证服务，您因此未能使用充值、取现、代扣等服务而产生的损失自行承担。</string>
    <string name="register_five_content5.2.2">（2）支付：您可以使用本平台指定的方式向您的唯一平台账户充入资金，用于通过本平台交易。</string>
    <string name="register_five_content5.2.3">（3）代付：本平台按照其平台当时向您开放的功能提供代付服务，即自行或委托第三方机构代为收取您交易后获得的本息收入或第三方向您的账户支付的各类款项，或者，将您账户里的款项支付给您指定的其他方。本平台不保证提供的前述服务符合您的期望。</string>
    <string name="register_five_content5.2.4">（4）提现：您可以通过本平台当时开放的取现功能将您账户中的资金转入经过认证并绑定的银行卡账户中。本平台将于收到您的前述指示后，尽快通过第三方机构将相应的款项汇入您经过认证并绑定的银行卡账户（根据您提供的银行不同，会产生汇入时间上的差异）。</string>
    <string name="register_five_content5.2.5">（5）查询：本平台将对您在本平台的所有操作进行记录，不论该操作之目的最终是否实现。您可以通过用户账户实时查询用户账户名下的交易记录。您理解并同意您最终收到款项的服务是由您经过认证的银行卡对应的银行提供的，需向该银行请求查证。</string>
    <string name="register_five_content5.2.6">（6）您了解，上述支付、代付及提现服务涉及本平台与银行、第三方支付机构等第三方的合作。您同意：</string>
    <string name="register_five_content5.2.a">（a） 受银行、第三方支付机构等第三方仅在工作日进行资金代扣及划转的现状等各种原因所限，本平台不对前述服务的资金到账时间做任何承诺，也不承担与此相关的责任，包括但不限于由此产生的利息、货币贬值等损失；</string>
    <string name="register_five_content5.2.b">（b） 一经您使用前述服务，即表示您不可撤销地授权本平台进行相关操作，且该等操作是不可逆转的，您不能以任何理由拒绝付款或要求取消交易。就前述服务，本平台暂不会向您收取费用，但您应按照第三方的规定向第三方支付费用，具体请见平台相关说明信息。与第三方之间就费用支付事项产生的争议或纠纷，与本平台无关。</string>
    <string name="register_five_content5.3">5.3交易服务：</string>
    <string name="register_five_content5.3.1">（1）您承诺在本平台只注册并使用唯一账户。</string>
    <string name="register_five_content5.3.2">（2）您确认，您的账户根据在本平台上按本平台服务说明所发出的指令及所确认的交易状态，将成为本平台为您进行相关交易或操作（包括但不限于支付或收取款项、冻结资金、订立合同等）的不可撤销的指令。您同意相关指令的执行时间以本平台在本平台系统中进行实际操作的时间为准。您同意本平台有权依据本协议及/或本平台相关纠纷处理规则等约定对相关事项进行处理。您未能及时对交易状态进行修改、确认或未能提交相关申请所引起的任何纠纷或损失由您自行负责，本平台不承担任何责任。</string>
    <string name="register_five_content5.3.3">（3） 您理解并同意，本平台对在本平台上进行的交易行为不承担任何责任，本平台无法也没有义务保证您在发出交易要约或投资意向后，能够实际交易成功或者交易成功后确定可以获得预期收益，您因前述原因导致的损失（包括但不限于利息、手续费等损失）由您自行承担，本平台不承担责任。</string>
    <string name="register_five_content5.3.4">（4）您通过本平台进行各项交易或接受交易款项时，若您未遵从本协议条款或本平台公布的交易规则中的操作指示，本平台不承担任何责任。若发生上述状况而款项已先行拨入您账户下，您同意本平台有权直接从相关您账户中扣回款项及禁止您要求支付此笔款项之权利。此款项若已汇入您的银行账户，您同意本平台有向您事后索回的权利，由此产生的追索费用由您承担。</string>
    <string name="register_five_content5.3.5">（5）本平台有权基于交易安全等方面的考虑不时设定涉及交易的相关事项，包括但不限于交易限额、交易次数、交易对手等，您了解本平台的前述设定可能会对交易造成一定不便，对此没有异议。</string>
    <string name="register_five_content5.3.6">（6）如果本平台发生因系统故障或其他任何原因导致的处理错误，无论有利于本平台还是有利于您，本平台都有权纠正该错误。如果该错误导致您实际收到的款项多于应获得的金额，则无论错误的性质和原因为何，本平台保留纠正不当执行的交易的权利，您应根据本平台向您发出的有关纠正错误的通知的具体要求返还多收的款项或进行其他操作。您理解并同意，您因前述处理错误而多付或少付的款项均不计利息，本平台不承担因前述处理错误而导致的任何损失或责任（包括您可能因前述错误导致的利息、汇率等损失）。</string>
    <string name="register_six">六、【自备设备】</string>
    <string name="register_six_content6.1">6.1您应当理解，您使用平台的服务需自行准备与相关服务有关的终端设备（如电脑、调制解调器等装置），并承担所需的费用（如电话费、上网费等费用）。</string>
    <string name="register_six_content6.2">6.2您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。</string>
    <string name="register_seven">七、【协议存管及证据】</string>
    <string name="register_seven_content7.1">7.1本平台向您提供电子协议的保存、查看、核对服务，如对电子协议真伪或电子协议的内容有任何疑问，您可通过使用本平台的“查阅合同”功能进行核对。如对此有任何争议，应以本平台记录为准。</string>
    <string name="register_seven_content7.2">7.2您不得私自仿制、伪造在本平台上签订的电子协议或印章，不得用伪造的合同进行招摇撞骗或进行其他非法使用，否则本平台保留一切追究您法律责任的权利。</string>
    <string name="register_seven_content7.3">7.3您理解并同意通过与本平台服务有关的一切信息包括交易数额、交易详情及损益等均以本平台查询结果为准，相关证据均以该等信息在本平台的记录为准，有关页面查询结果一旦与本平台提供的书面记录不一致的，以书面记录为准。</string>
    <string name="register_eight">八、【收费服务】</string>
    <string name="register_eight_content8.1">8.1平台的部分服务是以收费方式提供的（包括支付过程中需要向银行或支付机构支付的费用），如您使用收费服务，请遵守相关的协议或说明。</string>
    <string name="register_eight_content8.2">8.2平台可能根据实际需要（或第三方机构的要求）对收费服务的收费标准、方式进行修改和变更，平台也可能会对部分免费服务开始收费。前述修改、变更或开始收费前，平台将在相应服务页面进行通知或公告。如果您不同意上述修改、变更或付费内容，则应停止使用该服务。</string>
    <string name="register_nine">九、【第三方提供的产品或服务】</string>
    <string name="register_nine_content">您在平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的业务规则、用户协议。平台和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。</string>
    <string name="register_ten">十、【用户违法行为】</string>
    <string name="register_ten_content10.1">10.1您在使用本平台时须遵守法律法规，不得利用本平台从事违法违规行为，包括但不限于：</string>
    <string name="register_ten_content10.1.1">（1）侵害他人名誉、隐私权、商业秘密、商标权、著作权、专利权、其他知识产权及其他权益。</string>
    <string name="register_ten_content10.1.2">（2）违反依法律或合约所应负之保密义务。</string>
    <string name="register_ten_content10.1.3">（3）从事任何不法交易行为，如贩卖枪支、毒品、禁药、盗版软件或其他违禁物。</string>
    <string name="register_ten_content10.1.4">（4）提供赌博资讯或以任何方式引诱他人参与赌博。</string>
    <string name="register_ten_content10.1.5">（5）涉嫌洗钱、套现或进行传销活动的。</string>
    <string name="register_ten_content10.1.6">（6）从事任何可能含有电脑病毒或是可能侵害本平台服务系統、资料等行为。</string>
    <string name="register_ten_content10.1.7">（7）利用本平台服务系统进行可能对互联网或移动网正常运转造成不利影响之行为。</string>
    <string name="register_ten_content10.1.8">（8）利用本平台服务上传、展示或传播虚假的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、庸俗淫秽的或其他任何非法的信息资料。</string>
    <string name="register_ten_content10.1.9">（9）其他本平台有正当理由认为不适当之行为。</string>
    <string name="register_ten_content10.2">10.2如果您违反了本条约定，相关国家机关或机构可能会对您提起诉讼、罚款或采取其他制裁措施，并要求平台协助。造成损害的，您应依法予以赔偿，平台不承担任何责任。</string>
    <string name="register_ten_content10.3">10.3如果平台发现或收到他人举报您发布的信息违反本条约定，平台有权进行独立判断并采取技术手段予以删除、屏蔽或断开链接。同时，平台有权视用户的行为性质，采取包括但不限于暂停或终止服务，限制、冻结或终止使用，追究法律责任等措施。</string>
    <string name="register_ten_content10.4">10.4您违反本条约定，导致任何第三方损害的，您应当独立承担责任；平台因此遭受损失的，您也应当一并赔偿。</string>
    <string name="register_eleven">十一、【知识产权声明】</string>
    <string name="register_eleven_content">本平台在服务中提供的内容（包括但不限于网页、文字、图片、音频、视频、图表等）的知识产权均受到法律保护，未经平台或相关权利人书面许可，任何人不得以任何形式进行使用或创造相关衍生作品。</string>
    <string name="register_twelve">十二、【不可抗力及其他免责事由】</string>
    <string name="register_twelve_content12.1">12.1您理解并同意，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，平台将努力在第一时间与相关单位配合，及时进行修复，但是由此给您造成的损失平台在法律允许的范围内免责。</string>
    <string name="register_twelve_content12.2">12.2在法律允许的范围内，平台对以下情形导致的服务中断或受阻不承担责任：</string>
    <string name="register_twelve_content12.2.1">（1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏；</string>
    <string name="register_twelve_content12.2.2">（2）用户或平台的电脑软件、系统、硬件和通信线路出现故障；</string>
    <string name="register_twelve_content12.2.3">（3）用户操作不当；</string>
    <string name="register_twelve_content12.2.4">（4）用户通过非平台授权的方式使用本服务；</string>
    <string name="register_twelve_content12.2.5">（5）其他平台无法控制或合理预见的情形。</string>
    <string name="register_twelve_content12.3">12.3平台依据本协议约定获得处理违法违规内容的权利，该权利不构成平台的义务或承诺，平台不能保证及时发现违法行为或进行相应处理。</string>
    <string name="register_twelve_content12.4">12.4在任何情况下，您不应轻信借款、索要密码或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意平台有关防范诈骗犯罪的提示。</string>
    <string name="register_twelve_content12.5">12.5 本平台并不是银行或金融机构，按照中国法律规定，本平台不提供“即时”金额转账服务，在任何情况下本平台对资金到账延迟不承担任何责任。</string>
    <string name="register_thirteen">十三、【协议的约束与变更】</string>
    <string name="register_thirteen_content13.1">13.1您使用平台的服务即视为您已阅读本协议并接受本协议的约束。</string>
    <string name="register_thirteen_content13.2">13.2平台有权在必要时修改本协议。您可以在相关服务页面查阅最新版本的协议。</string>
    <string name="cancel">取消</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="code">验证码</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="phone">手机号码</string>
    <string name="login_pwd">登录密码</string>
    <string name="btn_login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="band_card">绑定银行卡</string>
    <string name="bank_name">银行名称</string>
    <string name="bank_num">银行卡号</string>
    <string name="enter_bank_num">请输入您的银行卡号</string>
    <string name="card_person">持卡人</string>
    <string name="enter_card_name">请输入持卡人的姓名</string>
    <string name="card_id">身份证</string>
    <string name="enter_card_id">请输入持卡人的身份证号</string>
    <string name="address">开户地</string>
    <string name="please_choice">请选择</string>
    <string name="_bank_name">支行名称</string>
    <string name="_enter_card_name">请输入开户支行名称</string>
    <string name="enter_card_phone">请输入银行预留手机号</string>
    <string name="transact_pwd">交易密码</string>
    <string name="enter_transact_pwd">请输入交易密码</string>
    <string name="transact_bind_bank">提款银行卡绑定</string>
    <string name="new_pwd">新密码</string>
    <string name="enter_new_pwd">请输入新密码</string>
    <string name="enter_new_pwd_again">请再次输入新密码</string>
    <string name="get_code">获取验证码</string>
    <string name="check_pwd">重复密码</string>
    <string name="reset_pwd">重设密码</string>
</resources>