<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="20dp"
            android:text="@string/phone"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_reset_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:text="@string/code"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_reset_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_code"
            android:maxLength="11"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_reset_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="#0379B5"
            android:text="@string/get_code"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:text="@string/new_pwd"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_reset_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_new_pwd"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/check_pwd"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_reset_pwd_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:background="@null"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_new_pwd_again"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <Button
        android:id="@+id/btn_reset_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="#5d91f9"
        android:text="@string/reset_pwd"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_reset_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="#0fc6c0"
        android:text="@string/cancel"
        android:textSize="15sp" />
</LinearLayout>
