<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_card_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/band_card"
            android:textColor="#000000"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/bank_name"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner_card_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:entries="@array/bank" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/bank_num"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_bank_num"
            android:inputType="phone"
            android:maxLength="19"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/card_person"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_card_name"
            android:maxLength="11"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/card_id"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_card_id"
            android:inputType="phone"
            android:maxLength="18"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_card_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:text="@string/please_choice"
            android:textColor="#000000"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:id="@+id/relative7"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/_bank_name"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/_enter_card_name"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:text="预留手机号"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_card_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/transact_pwd"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_card_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_transact_pwd"
            android:inputType="numberPassword"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#22000000" />

    <Button
        android:id="@+id/btn_card_binding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/mine_reset_btn_bg"
        android:text="@string/transact_bind_bank" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:background="#22000000" />
</LinearLayout>
