<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo_small" />

        <!--添加自定义边框mine_login_bg-->
        <LinearLayout
            android:id="@+id/lin_login"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/imageView"
            android:layout_margin="12dp"
            android:background="@drawable/mine_login_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/phone"
                    android:textColor="#CDC9C9"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CDC9C9"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/login_pwd"
                    android:textColor="#CDC9C9"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:background="@null"
                    android:hint="@string/enter_pwd"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#BEBEBE"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_login"
            android:layout_margin="12dp"
            android:background="@drawable/mine_login_btn_bg"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_login_login"
            android:layout_alignStart="@+id/btn_login_login"
            android:layout_below="@+id/btn_login_login"
            android:text="@string/forget_pwd"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_login_login"
            android:layout_alignRight="@+id/btn_login_login"
            android:layout_below="@+id/btn_login_login"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>